[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
